--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "chart.js": "^2.8.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.3",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "react-chartjs-2": "^2.7.6"
   }
 }
