--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt-nodejs": "0.0.3",
     "chart.js": "^2.8.0",
     "dotenv": "^7.0.0",
