--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "heroku-postbuild": "npm run build"
   },
   "nodemonConfig": {
-    "ignore": ["client/"]
+    "ignore": [
+      "client/"
+    ]
   },
   "author": "",
   "license": "ISC",
