--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@sendgrid/mail": "^6.4.0",
     "axios": "^0.18.0",
     "bcrypt-nodejs": "0.0.3",
     "chart.js": "^2.8.0",
